fixed layout bugs

--- a/src/components/elements/Header/mobileMenu.module.scss
+++ b/src/components/elements/Header/mobileMenu.module.scss
@@ -82,7 +82,7 @@
   box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.15);
   border-radius: 0 0 0 $border-radius-8;
 
-  animation: fadeIn 1s forwards;
+  animation: fadeIn 0.4s forwards;
 }
 
 .menu__item {
